--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,13 +36,13 @@ urls = {Repository = "https://github.com/cvg/glue-factory"}
 
 [project.optional-dependencies]
 extra = [
-    "jupyter",
     "pycolmap",
     "poselib @ git+https://github.com/PoseLib/PoseLib.git",
     "pytlsd @ git+https://github.com/iago-suarez/pytlsd.git",
     "deeplsd @ git+https://github.com/cvg/DeepLSD.git",
     "homography_est @ git+https://github.com/rpautrat/homography_est.git",
 ]
+dev = ["black", "flake8", "jupyter"]
 
 [tool.setuptools]
 packages = ["gluefactory", "gluefactory_nonfree"]
