--- a/gluefactory/configs/superpoint+lightglue_homography_eval.yaml
+++ b/gluefactory/configs/superpoint+lightglue_homography_eval.yaml
@@ -1,10 +1,10 @@
 model:
     name: two_view_pipeline
     extractor:
-        name: gluefactory_nonfree.superpoint
-        max_num_keypoints: 2048
+        name: extractors.superpoint_open
+        max_num_keypoints: 1024
         force_num_keypoints: True
-        detection_threshold: 0.0
+        detection_threshold: -1
         nms_radius: 3
         trainable: False
     matcher:
